--- a/css/style.css
+++ b/css/style.css
@@ -1,109 +1,405 @@
+body {
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-size: 18px;
+  line-height: 34px;
+  color: #777;
+  background: url("../images/concrete_seamless.png");
+}
 
-body
-{
-	border-style: solid;
-	border-color: Gray;
-	background-color: LightGray;
-	color: #000000;
-	width: 960px;
-	font-style: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+* {
+  box-sizing: border-box;
 }
-.backgroundHeader
-{
-	background-color: #ffffff;
-	margin: 0px 0px 0px 0px;
+
+/* general */
+
+.container {
+  width: 100%;
+  max-width: 960px;
+  margin: 0 auto;
+  clear: both;
 }
-.mainHeader
-{
-	background-color: #ffffff;
-	border-style: solid;
-	border-color: #dddddd;
+
+h1,
+h2,
+h3,
+p {
+  margin-bottom: 20px;
 }
-a.navBar
-{
-	display: inline block;
-	float: right;
-	margin: 0;
-	padding: 20px;
-	color: #4aaaa5;
-	
+
+p:last-child {
+  margin-bottom: 0;
 }
+
+h1,
+h2,
+h3 {
+  font-family: Georgia, Times, "Times New Roman", serif;
+  font-weight: 700;
+  color: #4aaaa5;
+}
+
+h1 {
+  padding-bottom: 20px;
+  font-size: 30px;
+  line-height: 49px;
+  border-bottom: 3px solid #ddd;
+}
+
+h2,
+h3 {
+  font-size: 22px;
+}
+
+/* header */
+
+#masthead {
+  position: fixed;
+  z-index: 99;
+  width: 100%;
+  margin: 0 0 30px;
+  overflow: auto;
+  color: #fff;
+  background: #fff;
+  border-bottom: 2px solid #ccc;
+}
+
+#logo {
+  float: left;
+  width: 250px;
+  height: 90px;
+  font-family: Georgia, Times, "Times New Roman", serif;
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 90px;
+  color: #fff;
+  text-align: center;
+  text-decoration: none;
+  background: #4aaaa5;
+}
+
+nav {
+  float: right;
+  margin-top: 25px;
+}
+
+nav a {
+  display: inline-block;
+  padding-left: 15px;
+  margin-left: 15px;
+  line-height: 18px;
+  color: #999;
+  text-decoration: none;
+  border-left: 1px solid #efefef;
+}
+
+nav a:first-child {
+  border-left: 0 none;
+}
+
 a.color-block
 {
-	display: block;
-	color: #fff;
-    background-color: #4aaaa5;
-    border-color: #007bff;
-    text-align: center;
-}
-a.links
-{
-	display: inline-block;
-	margin: 5px;
-}
-section.block
-{
-    border-top: 1px solid #bfc4c7;
-
-} 
-#block
-{
-	float: left;
-	display: inline-block;
-	border-style: outset;
-	margin-left: 40px;
-	width: 450px;
-	border-color: #dddddd;
-	background-color: #ffffff;
-	margin: 40px;
-	padding: 10px;
-
-}
-#connect
-{
-	float:right;
-	display: inline-block;
-	border-style: outset;
-	margin-left: 40px;
-	width: 250px;
-	border-color: #dddddd;
-	background-color: #ffffff;
-	margin: 40px;
-	padding: 10px;
-}
-h1
-{
-	display: inline-block;
-	font-family: 'Georgia', Times, Times New Roman, serif;
-	background-color: #4aaaa5;
-	color: white;
-	width: 250px;
-	text-align: center;
-	padding: 15px;
-	margin: 0;
-
-}	
-h2,h3
-{
-	display: inline-block;
-	color: #4aaaa5;
-
-	
-}
-img
-{
-	float: left;
-	margin-right: 10px;
-}
-footer
-{
-	clear: both;
-	display: block;
-	text-align: center;
-	font-size: 8pt;
-	border-style: groove;
-	padding: 50px;
-	background-color: Gray;
+  display: block;
+  color: #fff;
+  background-color: #4aaaa5;
+  border-color: #007bff;
+  text-align: center;
 }
 
+/* footer */
 
+footer {
+  padding: 30px 0;
+  clear: both;
+  font-size: 12px;
+  color: #fff;
+  color: #ccc;
+  text-align: center;
+  background: #666;
+  border-top: 8px solid #4aaaa5;
+}
+
+/* sidebar */
+
+.sidebar {
+  float: right;
+  width: 100%;
+  max-width: 270px;
+  padding: 30px;
+  margin-bottom: 20px;
+  background: #fff;
+  border: 1px solid #ddd;
+}
+
+h3,
+.sidebar h2 {
+  padding-bottom: 20px;
+  margin-bottom: 15px;
+  line-height: 22px;
+  border-bottom: 2px solid #eee;
+}
+
+.social {
+  width: 62px;
+  height: 62px;
+  margin-top: 8px;
+  margin-right: 5px;
+}
+
+.social:last-child {
+  margin-right: 0;
+}
+
+/* main */
+
+#main-container {
+  padding-top: 130px;
+}
+
+.main-section {
+  float: left;
+  width: 100%;
+  max-width: 650px;
+  padding: 30px;
+  margin: 0 0 40px;
+  background: #fff;
+  border: 1px solid #ddd;
+}
+
+/* portfolio page */
+
+.work {
+  position: relative;
+  float: left;
+  width: 274px;
+  margin: 20px 0 25px;
+  overflow: auto;
+}
+
+.work:nth-child(even) {
+  margin-right: 40px;
+}
+
+.work img {
+  width: 100%;
+  border: 0 none;
+  opacity: 0.8;
+}
+
+.work h3 {
+  position: absolute;
+  bottom: 20px;
+  width: 100%;
+  padding: 15px;
+  margin-bottom: 0;
+  font-weight: 300;
+  line-height: 30px;
+  color: #fff;
+  text-align: center;
+  background: #4aaaa5;
+  border-bottom: 0;
+}
+
+.auth-image {
+  float: left;
+  width: 200px;
+  height: auto;
+  margin-top: 10px;
+  margin-right: 25px;
+}
+
+/* contact page */
+
+#contact-form ul {
+  margin-bottom: 20px;
+}
+
+#contact-form li {
+  margin-bottom: 10px;
+}
+
+label,
+input[type=text],
+input[type=email],
+textarea {
+  display: block;
+  width: 100%;
+}
+
+input[type=text],
+input[type=email],
+textarea {
+  height: 35px;
+  padding: 0 10px;
+  font-size: 14px;
+  border: 1px solid #ddd;
+}
+
+textarea {
+  height: 200px;
+}
+
+input[type=submit] {
+  padding: 10px 30px;
+  font-size: 18px;
+  color: #fff;
+  cursor: pointer;
+  background: #4aaaa5;
+  border: 0 none;
+}
+
+/*980px - desktop */
+@media screen and (max-width: 980px) {
+  #logo {
+    margin-left: 10%;
+  }
+
+  nav {
+    margin-right: 10%;
+  }
+
+  .main-section {
+    max-width: 50%;
+    margin-left: 10%;
+  }
+
+  .auth-image {
+    width: 100%;
+    margin-bottom: 5%;
+  }
+
+  .sidebar {
+    max-width: 27%;
+    margin-right: 10%;
+  }
+
+/* Portfolio */
+  .work {
+    width: 100%;
+  }
+
+}
+
+/* 768px - tablet */
+@media only screen and (max-width: 768px) {
+
+  #logo {
+    margin-left: 2%;
+    font-size: 20px;
+    width: 230px;
+  } 
+
+  body {
+    font-size: 95%;
+  }
+
+  #masthead {
+  /*Why does this float?*/
+  }
+
+  h1 {
+    font-size: 20px;
+    margin-bottom: 10px;
+    padding-top: 20px;
+  }
+
+  h2 {
+  font-size: 18px;
+  }
+
+  /*.container {
+    width: 85%;
+  }*/
+
+  nav {
+    margin-top: 4%;
+    margin-bottom: 2%;
+    margin-right: 2%;
+  }
+
+  .main-section {
+    max-width: 95%;
+    margin-left: 15px;
+    margin-right: 10px;
+    padding-right: 70px;
+    padding-top: 15px;
+  }
+
+  .auth-image {
+    width: 50%;
+  }
+
+  .sidebar {
+    max-width: 95%;
+    margin-right: 3%;
+    margin-bottom: 5%;
+    margin-left: 0px;
+    padding-right: 20px;
+  }
+
+}
+
+/* 640px - mobile phones in portrait */
+
+@media screen and (max-width: 640px) {
+
+  /*Bio, Contact & Portfolio common functionality for pages*/
+  header {
+    position: static;
+  }
+
+  body {
+    font-size: 80%;
+  }
+
+  .auth-image {
+    width: 100%;
+    height: auto;
+    margin-bottom: 5%;
+  }
+
+  #masthead {
+  margin-top: -7%;
+  margin-right: -2%;
+  }
+
+  #logo {
+    width: 100%;
+    margin-left: 0%;
+    font-size: 20px;
+  }
+
+  h1 {
+    font-size: 20px;
+    margin-bottom: 10px;
+    padding-top: 20px;
+  }
+
+  h2 {
+  font-size: 18px;
+  }
+
+  nav {
+    margin-top: 2%;
+    margin-bottom: 2%;
+    margin-right: 20%;
+  }
+
+  .main-section {
+    width:94%;
+    margin-left: 10px;
+    margin-bottom: 20px;
+    padding: 0 20px;
+  }
+
+  .sidebar {
+    max-width: 94%;
+    margin: 0px 10px 10px 20px;
+    margin-bottom: 10%;
+    padding: 10 20px;
+  }
+
+  /*Portfolio page*/
+
+  .work {
+    width: 100%;
+  }
