--- a/css/style.css
+++ b/css/style.css
@@ -26,10 +26,6 @@ p {
   margin-bottom: 20px;
 }
 
-p:last-child {
-  margin-bottom: 0;
-}
-
 h1,
 h2,
 h3 {
@@ -249,31 +245,7 @@ input[type=submit] {
 
 /*980px - desktop */
 @media screen and (max-width: 980px) {
-  #logo {
-    margin-left: 10%;
-  }
-
-  nav {
-    margin-right: 10%;
-  }
-
-  .main-section {
-    max-width: 50%;
-    margin-left: 10%;
-  }
-
-  .auth-image {
-    width: 100%;
-    margin-bottom: 5%;
-  }
-
-  .sidebar {
-    max-width: 27%;
-    margin-right: 10%;
-  }
-
-/* Portfolio */
-  .work {
+  .container {
     width: 100%;
   }
 
@@ -282,124 +254,17 @@ input[type=submit] {
 /* 768px - tablet */
 @media only screen and (max-width: 768px) {
 
-  #logo {
-    margin-left: 2%;
-    font-size: 20px;
-    width: 230px;
+  .container {
+    width: 100%;
   } 
 
-  body {
-    font-size: 95%;
-  }
-
-  #masthead {
-  /*Why does this float?*/
-  }
-
-  h1 {
-    font-size: 20px;
-    margin-bottom: 10px;
-    padding-top: 20px;
-  }
-
-  h2 {
-  font-size: 18px;
-  }
-
-  /*.container {
-    width: 85%;
-  }*/
-
-  nav {
-    margin-top: 4%;
-    margin-bottom: 2%;
-    margin-right: 2%;
-  }
-
-  .main-section {
-    max-width: 95%;
-    margin-left: 15px;
-    margin-right: 10px;
-    padding-right: 70px;
-    padding-top: 15px;
-  }
-
-  .auth-image {
-    width: 50%;
-  }
-
-  .sidebar {
-    max-width: 95%;
-    margin-right: 3%;
-    margin-bottom: 5%;
-    margin-left: 0px;
-    padding-right: 20px;
-  }
-
+  
 }
 
 /* 640px - mobile phones in portrait */
 
 @media screen and (max-width: 640px) {
 
-  /*Bio, Contact & Portfolio common functionality for pages*/
-  header {
-    position: static;
-  }
-
-  body {
-    font-size: 80%;
-  }
-
-  .auth-image {
-    width: 100%;
-    height: auto;
-    margin-bottom: 5%;
-  }
-
-  #masthead {
-  margin-top: -7%;
-  margin-right: -2%;
-  }
-
-  #logo {
-    width: 100%;
-    margin-left: 0%;
-    font-size: 20px;
-  }
-
-  h1 {
-    font-size: 20px;
-    margin-bottom: 10px;
-    padding-top: 20px;
-  }
-
-  h2 {
-  font-size: 18px;
-  }
-
-  nav {
-    margin-top: 2%;
-    margin-bottom: 2%;
-    margin-right: 20%;
-  }
-
-  .main-section {
-    width:94%;
-    margin-left: 10px;
-    margin-bottom: 20px;
-    padding: 0 20px;
-  }
-
-  .sidebar {
-    max-width: 94%;
-    margin: 0px 10px 10px 20px;
-    margin-bottom: 10%;
-    padding: 10 20px;
-  }
-
-  /*Portfolio page*/
-
-  .work {
+  .container {
     width: 100%;
   }
